# lear

./: .gitignore  Cargo.toml  Pipfile  license  pyproject.toml  readme.md
preprocessing/: lear.html  metadata.py  munge.py
preprocessing/scenes/: 01.json  03.json  10.json  11.json  14.json  16.json  23.json  24.json
src/: lib.rs  main.rs
src/res/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json
